k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: concert-app
  labels:
    name: concert-app
    environment: production
